✨ [FEAT] 거리순 + 지역 + 장르 필터링 구현